overflow issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,7 @@ Common Css
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
